--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,12 @@
         padding: 0;
     }
 
+    .roboto-regular {
+        font-family: "Roboto", system-ui;
+        font-weight: 400;
+        font-style: normal;
+    }
+      
     body {
         height: 100%;
     }
@@ -19,16 +25,21 @@
     .container div {
         padding: 10px;
         font-size: 24px;
-        font-family: Helvetica;
+        font-family: "Roboto", Helvetica, sans-serif;
         font-weight: bold;
         color: black;
 
     }
 
-    svg {
+    .menu-icons {
         width: 2rem;
         height: 2rem;
         fill: white;
+    }
+
+    .card-icons {
+        width: 1.5rem;
+        height: 1.5rem;
     }
 
     .dashboard-logo{
@@ -90,9 +101,10 @@
     .mainframe {
         display: grid;
         grid-template-columns: 3fr minmax(250px, 1fr);
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: minmax(250px, 1fr) minmax(250px, 1fr);
         border-top: 5px solid lightgray !important;
         background-color: #bccbde;
+        width: 100%;
     }
 
     .projects {
@@ -100,32 +112,13 @@
         text-align: left;
     }
 
-
-
-
-
-
-
-
-    /* .nav ul {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        list-style: none;
+    .blocks {
+        text-align: left;
     }
 
-
-
-
-
-    .nav {
-        background-color: #C50208;
-        grid-column: 2 / 3;
+    .announcements, .trending {
+        padding: 10px 0px !important;
     }
-
-    .nav ul li {
-        font-size: 16px;
-        text-transform: uppercase;
-    } */
 
 
     .article {
@@ -150,6 +143,22 @@
         border-radius: 12px;
         box-shadow: 0px 4px 8px rgb(0,0,0,0.1);
         overflow: hidden;
+        display: grid;
+        grid-template-rows: 3fr 1fr
+    }
+
+    .announce-card {
+        position: relative;
+        background-color: #FFFFFF;
+        color: black;
+        text-align: left;
+        border-radius: 12px;
+        box-shadow: 0px 4px 8px rgb(0,0,0,0.1);
+        overflow: hidden;
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
+        min-width: 200px;
+        padding: 20px 10px !important;
     }
 
     .card::before {
@@ -168,18 +177,50 @@
         align-items: center;
     }
     */
-    .card p {
+    .text p {
         color: rgb(175, 175, 175);
         font-weight: normal;
         font-size: 14px;
-        padding: 5px;
+        padding-left: 5px;
+        padding-right: 10px;
+
     }
 
-    .card .title {
+    .announce-card .text p {
+        color: rgb(175, 175, 175);
+        font-weight: normal;
+        font-size: 11px;
+        padding: 0 15px;
+    }
+
+    .text .title {
         font-size: 18px;
         text-align: left;
         color: black;
         font-weight: bold;
+        padding-top: 5px;
+        padding-left: 5px;
+        padding-right: 10px;
+    }
+
+    .announce-card .text .title {
+        font-size: 14px;
+        text-align: left;
+        color: black;
+        font-weight: bold;
+        padding: 0 15px;
+    }
+
+    .announce-card .text {
+        padding: 15px 10px;
+    }
+
+    .card .links {
+        justify-self: right;
+    }
+
+    .card-icons {
+        padding: 0 10px;
     }
 
     /* .footer {
