--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
     .container {
         text-align: center;
         display: grid;
-        grid-template-columns: 300px 1fr;
+        grid-template-columns: 250px 1fr;
         grid-template-rows: 200px 1fr;
         height: 100vh;
         /* height: calc(100vh - 1rem - 20px); */
@@ -173,11 +173,19 @@
 
     .mainframe {
         display: grid;
-        grid-template-columns: 3fr minmax(250px, 1fr);
-        grid-template-rows: minmax(250px, 1fr) minmax(250px, 1fr);
+        grid-template-columns: 3fr minmax(322px, 1fr);
+        grid-template-rows: min(500px);
         border-top: 5px solid lightgray !important;
         background-color: #bccbde;
         
+        
+    }
+
+    .right-frame {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        padding: 0px 10px !important;
     }
 
     .projects {
@@ -313,7 +321,7 @@
 
     .trending-block {
         display: flex;
-        flex-basis: 200px;
+        flex-basis: 265px;
     }
 
     .trending-block img {
